# CocoroGhost

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  build.bat  cocoro_ghost_windows.spec  pyproject.toml  run.py  setup.bat  start.bat
cocoro_ghost/: __init__.py  affect.py  agent_runner.py  camera_watch.py  common_utils.py  config.py  db.py  db_migrations.py  deps.py  desktop_watch.py  entity_utils.py  entrypoint.py  event_stream.py  internal_worker.py  llm_client.py  llm_debug.py  log_stream.py  logging_config.py  main.py  memory.py  memory_models.py  models.py  paths.py  periodic.py  prompt_builders.py  prompts.py  reminders_db.py  reminders_models.py  reminders_repo.py  reminders_service.py  resources.py  schemas.py  time_utils.py  tls.py  vector_index.py  vision_bridge.py  worker.py  worker_constants.py  worker_handlers.py  worker_handlers_autonomy.py  (+6 more)
cocoro_ghost/api/: __init__.py  admin.py  auth.py  (+12 more)
config/: setting.toml.release
docs/: 00_codex.md  00_はじめに.md  01_全体像.md  02_記憶モデル.md  03_時間モデル.md  03_自発行動アーキテクチャ方針.md  04_検索（思い出す）.md  05_記憶更新（育てる）.md  06_ストレージ（SQLite）.md  07_API.md  08_観測とデバッグ.md  09_感情.md  10_実行フロー.md  11_記憶整理（整える）.md  12_画像付きチャット.md  13_WebブラウザUI.md  14_WebUI_HTTPS_実装設計.md  15_参考論文_記憶.md  15_長期会話評価計画.md  16_参考実装_automem.md  16_長期会話シナリオ台帳.md  17_導入候補_記憶強化.md  18_自発行動アーキテクチャ詳細設計.md  19_汎用エージェント委譲設計.md  20_人格中心化（会話と自発行動）実装設計.md  README.md  THIRD_PARTY_LICENSES.txt  api.md  bootstrap.md
scripts/: estimate_roundtrip_tokens.py  generate_third_party_licenses.py
static/: app.js  index.html  style.css
tests/: test_api.py
(+114 files in other folders)
