[project]
name = "cocoro-ghost"
version = "0.1.0"
description = "CocoroAI core (CocoroGhost)"
requires-python = ">=3.10"
dependencies = [
  # --- Web/API ---
  "fastapi==0.128.0",
  "uvicorn[standard]==0.38.0",
  # --- DB/crypto ---
  "sqlalchemy==2.0.46",
  "cryptography==46.0.3",
  "sqlite-vec==0.1.6",
  # --- LLM ---
  "litellm==1.81.6",
  # --- Core utils ---
  "pydantic==2.12.5",
  "python-multipart==0.0.21",
  "httpx==0.28.1",
  "tomli==2.4.0",
  "typing_inspect==0.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cocoro_ghost"]
